# qTox-resources

./: CMakeLists.txt  CMakePresets.json
smileys/Noto/: README.md  emoticons.qrc  emoticons.xml
smileys/OpenMoji/: emoticons.qrc  emoticons.xml
